--- a/gitithm.ipynb
+++ b/gitithm.ipynb
@@ -29,7 +29,25 @@
     "## 쉽게 작성하는 방법\n",
     "\n",
     "- .gitignore 파일의 내용을 쉽게 작성할 수 있도록 도와주는 사이트\n",
-    " "
+    "- [링크](https://gitignore.io)\n",
+    "- 자신이 사용하고 있는 츠로그래밍 언어, 프레임워크 검색후 추가\n",
+    "- 생성된 내용을 복사해서 .gitignore 파일에 붙여넣기\n",
+    "- 절대로 확장자명이 달라서는 안된다.\n",
+    "\n",
+    "## 직접 작성하는 방법\n",
+    "\n",
+    "### .gitignore 패턴 규칙\n",
+    "\n",
+    "1. 아무것도 없는 라인, # 으로 시작하는 라인은 무시합니다.\n",
+    "2.다렉토리는 슬래시(/)를 끝에 사용하는 것으로 표현합니다.\n",
+    "3. 표준 Glob 패턴을 사용한다\n",
+    "    1. *(asterisk)은 문자가 하나도 없거나 하나 이상을 의미합니다.\n",
+    "    2. [abc]는 괄호 안에 문자 하나를 의미합니다.\n",
+    "    3. ? 는 문자하나를 의미합니다.\n",
+    "    4. [0-9]는 괄호 안에 0에서 9사이의 문자중 하나를 의미합니다.\n",
+    "    5. ** 는 디렉토리 내부의 디렉토리까지 지정할 수 있다.(중첩, 재귀)\n",
+    "        1. (a/**/z 라고 작성하면 a/z, a/b/z, a/b/c/z 까지 모두 영향을 끼치게 된다.)\n",
+    "    4. !로 시작하는 패턴의 파일은 ignore(무시)하지 않습니다."
    ]
   }
  ],
